--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -315,6 +315,10 @@ jobs:
 
       - run: cmake --build ${{ github.workspace }}/yaml-cpp-build --target install
 
+      - name: Update CMAKE_PREFIX_PATH
+        shell: bash
+        run: echo "CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:${{ github.workspace }}/yaml-cpp" >> $GITHUB_ENV
+
       - uses: actions/checkout@v3
 
       # # Note: This allows ${{ env.VCPKG_INSTALLATION_ROOT }} to be used in the remaining steps
@@ -345,7 +349,8 @@ jobs:
         if: ${{ runner.os == 'Windows' }}
 
       - run: 'gci env: | Format-Table -Wrap -AutoSize'
-        if: ${{ runner.os == 'Windows' }}
+        shell: pwsh
+        if: ${{ runner.os == 'Linux' || runner.os == 'Windows' }}
 
       - run: |
           where icl
@@ -365,10 +370,9 @@ jobs:
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-          -Dyaml-cpp_DIR=${{ github.workspace }}/yaml-cpp/lib/cmake/yaml-cpp
           -S ${{ github.workspace }}
           -L
-        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi != 'msmpi' }}
+        if: ${{ matrix.mpi != 'msmpi' }}
 
       - run: >
           cmake
@@ -380,66 +384,9 @@ jobs:
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-          -Dyaml-cpp_DIR=${{ github.workspace }}/yaml-cpp/lib/cmake/yaml-cpp
           -S ${{ github.workspace }}
           -L
-        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi == 'msmpi' }}
-
-      # - run: >
-      #     cmake
-      #     -G Ninja
-      #     -B ${{ github.workspace }}/build-mpi
-      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-      #     -S ${{ github.workspace }}
-      #     --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake
-      #     -L
-      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi != 'msmpi' }}
-
-      # - run: >
-      #     cmake
-      #     -G Ninja
-      #     -B ${{ github.workspace }}/build-mpi
-      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-      #     -DMPI_GUESS_LIBRARY_NAME=MSMPI
-      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-      #     -S ${{ github.workspace }}
-      #     --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake
-      #     -L
-      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi == 'msmpi' }}
-
-      # - run: >
-      #     cmake
-      #     -G Ninja
-      #     -B ${{ github.workspace }}/build-mpi
-      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-      #     -S ${{ github.workspace }}
-      #     -L
-      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi != 'msmpi' }}
-
-      # - run: >
-      #     cmake
-      #     -G Ninja
-      #     -B ${{ github.workspace }}/build-mpi
-      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-      #     -DMPI_GUESS_LIBRARY_NAME=MSMPI
-      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-      #     -S ${{ github.workspace }}
-      #     -L
-      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi == 'msmpi' }}
+        if: ${{ matrix.mpi == 'msmpi' }}
 
       - run: cmake --build ${{ github.workspace }}/build-mpi
 
