--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -177,7 +177,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, macos-12, windows-2019, windows-2022]
+        # os: [ubuntu-22.04, macos-12, windows-2019, windows-2022]
+        os: [windows-2019]
         toolchain:
           # - {compiler: gcc, version: 9}
           - {compiler: gcc, version: 13}
@@ -315,9 +316,9 @@ jobs:
 
       - run: cmake --build ${{ github.workspace }}/yaml-cpp-build --target install
 
-      - name: Update CMAKE_PREFIX_PATH
-        shell: bash
-        run: echo "CMAKE_PREFIX_PATH=${{ github.workspace }}/yaml-cpp" >> $GITHUB_ENV
+      # - name: Update CMAKE_PREFIX_PATH
+      #   shell: bash
+      #   run: echo "CMAKE_PREFIX_PATH=${{ github.workspace }}/yaml-cpp" >> $GITHUB_ENV
 
       - uses: actions/checkout@v3
 
@@ -370,6 +371,7 @@ jobs:
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+          -"Dyaml-cpp_DIR=${{ github.workspace }}/yaml-cpp/lib/cmake/yaml-cpp"
           -S ${{ github.workspace }}
           -L
         if: ${{ matrix.mpi != 'msmpi' }}
@@ -384,6 +386,7 @@ jobs:
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+          -DCMAKE_PREFIX_PATH=${{ github.workspace }}/yaml-cpp
           -S ${{ github.workspace }}
           -L
         if: ${{ matrix.mpi == 'msmpi' }}
