--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -309,12 +309,17 @@ jobs:
           -G Ninja
           -B ${{ github.workspace }}/yaml-cpp-build
           -DCMAKE_BUILD_TYPE=Release
-          -DCMAKE_INSTALL_PREFIX:=${{ github.workspace }}/yaml-cpp
           -S ${{ github.workspace }}/yaml-cpp-0.8.0
           -L
         if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
 
+      - run: cmake --build ${{ github.workspace }}/yaml-cpp-build
+
       - run: cmake --build ${{ github.workspace }}/yaml-cpp-build --target install
+        if: runner.os == 'Windows'
+
+      - run: sudo cmake --build ${{ github.workspace }}/yaml-cpp-build --target install
+        if: runner.os != 'Windows'
 
       # - name: Update CMAKE_PREFIX_PATH
       #   shell: bash
@@ -371,7 +376,6 @@ jobs:
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-          -"Dyaml-cpp_DIR=${{ github.workspace }}/yaml-cpp/lib/cmake/yaml-cpp"
           -S ${{ github.workspace }}
           -L
         if: ${{ matrix.mpi != 'msmpi' }}
@@ -386,7 +390,6 @@ jobs:
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-          -DCMAKE_PREFIX_PATH=${{ github.workspace }}/yaml-cpp
           -S ${{ github.workspace }}
           -L
         if: ${{ matrix.mpi == 'msmpi' }}
