--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -356,11 +356,14 @@ jobs:
         run: cat ${{ github.workspace }}/build-mpi/phreeqcrm.pc
 
   msvc:
-    runs-on: ${{ matrix.os }}
+    name: ${{ matrix.system.tag }}-${{ matrix.build_shared_libs.tag }}-(YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }})(FORTRAN_TESTING=${{ matrix.phreeqcrm_fortran_testing }})
+    runs-on: ${{ matrix.system.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, windows-2022]
+        system:
+          - {os: windows-2019, generator: 'Visual Studio 16 2019', tag: vs2019}
+          - {os: windows-2022, generator: 'Visual Studio 17 2022', tag: vs2022}
         build_shared_libs:
           - {value: ON, tag: shared}
           # - {value: OFF, tag: static}
@@ -405,6 +408,7 @@ jobs:
       - name: cmake configure phreeqcrm
         run: >
           cmake
+          -G ${{ matrix.system.generator }}
           -B ${{ github.workspace }}/build
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs.value }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
